# oniri

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  cliff.toml
.github/: PULL_REQUEST_TEMPLATE.md  renovate.json
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md  other.md
.github/workflows/: CI.yml  mdl_style.rb
doc/man/: oniri.1.scd
res/completions/: oniri.bash  oniri.fish  oniri.zsh
scripts/: mkrelease.sh
src/: fill_gap.rs  firstonly.rs  help.rs  lockfile.rs  main.rs  maximize.rs  maximize_window.rs  outputs.rs  outputs_map.rs  outputsmap.rs  screen_space.rs  size_compare.rs  sizecompare.rs  socket.rs  socket_connections.rs  version.rs  window.rs  windows_map.rs  windowsmap.rs
tests/: help.rs  version.rs
