[package]
name = "oniri"
version = "0.0.1"
authors = ["Robin Candau <robincandau@protonmail.com>"]
edition = "2024"
description = "A tool that automatically maximizes the only window of a niri workspace"
license = "GPL-3.0-or-later"

[dependencies]
niri-ipc = "25.11.0"
anyhow = "1.0.102"

[dev-dependencies]
assert_cmd = "2.0.0"
predicates = "3.1.4"
