[package]
name = "oniri"
version = "1.2.3"
authors = ["Robin Candau <robincandau@protonmail.com>"]
edition = "2024"
description = "A tool that automatically maximizes the only window of a niri workspace"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.9"
log = "0.4.29"
niri-ipc = "26.0.0"

[dev-dependencies]
assert_cmd = "2.0.0"
predicates = "3.1.4"
